CMAKE_MINIMUM_REQUIRED(VERSION 2.8...3.20)
PROJECT(TDengine)

INCLUDE_DIRECTORIES(inc)
AUX_SOURCE_DIRECTORY(src SRC)

ADD_LIBRARY(cache ${SRC})
TARGET_LINK_LIBRARIES(cache tutil common)

IF (TD_DARWIN)
  ADD_SUBDIRECTORY(tests)
ENDIF ()

IF (TD_LINUX)
  # Someone has no gtest directory, so comment it
  ADD_SUBDIRECTORY(tests)
ENDIF ()