CMAKE_MINIMUM_REQUIRED(VERSION 3.5)
PROJECT(TDengine)

IF (TD_LINUX)
  INCLUDE_DIRECTORIES(${TD_COMMUNITY_DIR}/src/query/inc)
  INCLUDE_DIRECTORIES(${TD_COMMUNITY_DIR}/src/dnode/inc)

  INCLUDE_DIRECTORIES(inc)
  AUX_SOURCE_DIRECTORY(src SRC)

  ADD_LIBRARY(mnode ${SRC})
ENDIF ()

IF (TD_DARWIN)
  INCLUDE_DIRECTORIES(${TD_COMMUNITY_DIR}/src/query/inc)
  INCLUDE_DIRECTORIES(${TD_COMMUNITY_DIR}/src/dnode/inc)

  INCLUDE_DIRECTORIES(inc)
  AUX_SOURCE_DIRECTORY(src SRC)

  ADD_LIBRARY(mnode ${SRC})
ENDIF ()

