CMAKE_MINIMUM_REQUIRED(VERSION 2.8)
PROJECT(TDengine)

IF (TD_LINUX_64)
  ADD_SUBDIRECTORY(src/linux64)
ELSEIF (TD_LINUX_32)
  ADD_SUBDIRECTORY(src/linux32)
ELSEIF (TD_DARWIN_64)
  ADD_SUBDIRECTORY(src/darwin64)  
ELSEIF (TD_WINDOWS_64)
  ADD_SUBDIRECTORY(src/windows64)
ENDIF ()

ADD_SUBDIRECTORY(src/spec)
