CMAKE_MINIMUM_REQUIRED(VERSION 2.8)
PROJECT(TDengine)

IF (TD_LINUX_64)
  ADD_SUBDIRECTORY(src/linux64)
ELSEIF (TD_LINUX_32)
  ADD_SUBDIRECTORY(src/linux32)
ELSEIF (TD_DARWIN_64)
  ADD_SUBDIRECTORY(src/darwin)  
ELSEIF (TD_WINDOWS_64)
  ADD_SUBDIRECTORY(src/windows)
ELSEIF (TD_WINDOWS_32)
  ADD_SUBDIRECTORY(src/windows)
ENDIF ()

ADD_SUBDIRECTORY(src/detail)
